--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav a:hover{
 /*end navbare*/
 /*start inrto*/
 #intro{
-    padding-top: 30vh;
+    padding-top: 28vh;
 }
 .intro{
     display: flex;
@@ -358,37 +358,171 @@ nav a:hover{
     border-radius: 20px;
     background-color:#b0e3d9;
 }
+/*start comfirm button*/
+#comfirm1{
+    width: 88%;
+    margin-top: 5vh ;
+    position: relative;
+}
+#confirm {
+    border: none;
+    background-color: #b0e3d9;
+    border-radius: 30px;
+    position: absolute;
+    right: 0;
+    width: 40vh;
+    height: 7vh;
+    font-size: 3vh;
+}
+#confirm{
+    transition: transform 0.3s , background-color 0.5s ease-in-out, color 0s;
+}
+#confirm:hover{
+    transform: translateY(-10px);
+    box-shadow: 1px 5px 20px 6px rgba(149,206,195,0.53);
+    -webkit-box-shadow: 1px 5px 20px 6px rgba(149,206,195,0.53);
+    -moz-box-shadow: 1px 5px 20px 6px rgba(149,206,195,0.53);
+
+}
+#confirm:active{
+    background-color:#13648f9e;
+    color: aliceblue;
+}
+/*end confirm button*/
 /*start footer*/
 footer{
     display: flex;
-    justify-content: space-between;
-    margin-top: 10vh;
-    padding: 0 20px;
-    padding-bottom: 20px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #402661;
-}
-footer div{
-    display: flex;
     flex-direction: column;
-    row-gap: 10px;
-    text-align: center
+    gap: 5vh;
+    align-items: center;
+    /*background-color: #402661;*/
+    margin-top: 20vh;
+    position: relative;
 }
+#socials {
+    position:absolute;
+    top:60%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    margin:0;
+    padding:0;
+    display:flex;
+  }
+  #socials li {
+    list-style:none;
+  }
+  #socials li a {
+    display:block;
+    position:relative;
+    width:100px;
+    height:100px;
+    line-height:100px;
+    font-size:40px;
+    text-align:center;
+    text-decoration:none;
+    color:#404040;
+    margin: 0 30px;
+    transition:.5s;
+  }
+  #socials li a span {
+    position:absolute;
+    transition: transform .5s;
+  }
+  #socials li a span:nth-child(1),
+  #socials li a span:nth-child(3){
+    width:100%;
+    height:3px;
+    background:#404040;
+  }
+  #socials li a span:nth-child(1) {
+    top:0;
+    left:0;
+    transform-origin: right;
+  }
+  #socials li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+    transition:transform .5s;
+  }
+  
+  #socials li a span:nth-child(3) {
+    bottom:0;
+    left:0;
+    transform-origin: left;
+  }
+  #socials li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+    transition:transform .5s;
+  }
+  
+  #socials li a span:nth-child(2),
+  #socials li a span:nth-child(4){
+    width:3px;
+    height:100%;
+    background:#404040;
+  }
+  #socials li a span:nth-child(2) {
+    top:0;
+    left:0;
+    transform:scale(0);
+    transform-origin: bottom;
+  }
+  #socials li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+    transition:transform .5s;
+  }
+  #socials li a span:nth-child(4) {
+    top:0;
+    right:0;
+    transform:scale(0);
+    transform-origin: top;
+  }
+  #socials li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+    transition:transform .5s;
+  }
+  
+  .facebook:hover {
+    color: #3b5998;
+  }
+  .facebook:hover span { 
+    background: #3b5998;
+  }
+  .twitter:hover {
+    color: #1da1f2;
+  }
+  .twitter:hover span { 
+    background: #1da1f2;
+  }
+  .instagram:hover {
+    color: #c32aa3;
+  }
+  .instagram:hover span { 
+    background: #c32aa3;
+  }
+  .google:hover {
+    color: #dd4b39;
+  }
+  .google:hover span { 
+    background: #dd4b39;
+  }
+  #socials li a .twitter {
+    color: #1da1f2;
+  }
+  #socials li a:hover:nth-child(3) {
+    color: #c32aa3;
+  }
+  #socials li a:hover:nth-child(4) {
+    color: #dd4b39;
+  }
 footer h1{
+    font-size: 15vh;
     font-weight: 300;
-    font-size: 30px;
-    color: white;
 }
-footer p{
-    font-weight: 300;
-    font-size: 30px; 
-    color: white;
-}
-footer p:hover{
-    color: #ff6347;
-}
-footer h1:hover{
-    color: #ff6347;
+footer h2 {
+    font-size:5vh;
+    font-weight: 200;
 }
